[gd_scene load_steps=8 format=4 uid="uid://b1g7jvcjtqy58"]

[ext_resource type="Script" uid="uid://bhfc0vgtceulj" path="res://Scripts/block/button_block_1.gd" id="1_cl5nb"]
[ext_resource type="Script" uid="uid://bggrlypqi73ds" path="res://Scripts/select_highlight.gd" id="3_cfiug"]
[ext_resource type="Material" uid="uid://cl087bvm5sh0q" path="res://outline_and_selection/outline.tres" id="4_uaqhu"]
[ext_resource type="PackedScene" uid="uid://btdgpsl5axthc" path="res://Scenes/notifier.tscn" id="5_8re1r"]
[ext_resource type="PackedScene" uid="uid://cy1yprb1fcpyi" path="res://Scenes/Suitcase_block.tscn" id="5_jmmk1"]

[sub_resource type="ArrayMesh" id="ArrayMesh_lcudj"]
_surfaces = [{
"aabb": AABB(-0.035, -0.005, -0.035, 0.07, 0.01, 0.07),
"attribute_data": PackedByteArray("////PgAAAAC4+Bg/AAAAAAAAgD8AAAAAAABIPwAAgD8AAEA/AACAPwAAQD8AAAAAAAAAPgAAAAAAACA+AAAAAAAAID4AAIA/AADAPQAAAAAAAAA+AAAAAAAAAD4AAIA/AAAAPQAAAAAAAIA9AAAAAAAAgD0AAIA/AACAPQAAAAAAAMA9AAAAAAAAwD0AAIA/AAAAAAAAAAAAAAA9AAAAAAAAAD0AAIA/7RxHPwAAAAB6glo/AAAAAAAAgD8AAAAAxfswPwAAAADtHEc/AAAAAAAAgD8AAAAAuPgYPwAAAADF+zA/AAAAAAAAgD8AAAAAmG1qPwAAAACvQXY/AAAAAAAAgD8AAAAAeoJaPwAAAACYbWo/AAAAAAAAgD8AAAAAr0F2PwAAAABfin0/AAAAAAAAgD8AAAAAAAAgPgAAAAAAAEA+AAAAAAAAQD4AAIA/AABAPgAAAAAAAGA+AAAAAAAAYD4AAIA/AABgPgAAAAAAAIA+AAAAAAAAgD4AAIA/AABQPwAAgD8AAEg/AACAPwAASD8AAAAAkA7OPgAAAAD///8+AAAAAAAAgD8AAAAAdgiePgAAAACQDs4+AAAAAAAAgD8AAAAAToxjPgAAAAB2CJ4+AAAAAAAAgD8AAAAAAAB4PwAAAAAAAAAAAAAAAAAAAAAAAIA/AABwPwAAAAAAAHg/AAAAAAAAeD8AAIA/AABoPwAAAAAAAHA/AAAAAAAAcD8AAIA/AABgPwAAAAAAAGg/AAAAAAAAaD8AAIA/AABYPwAAAAAAAGA/AAAAAAAAYD8AAIA/YIp9PwAAAACwQXY/AAAAAAAAgD8AAAAAsEF2PwAAAACYbWo/AAAAAAAAgD8AAAAAmG1qPwAAAAB4glo/AAAAAAAAgD8AAAAAeIJaPwAAAADsHEc/AAAAAAAAgD8AAAAA7BxHPwAAAADH+zA/AAAAAAAAgD8AAAAAx/swPwAAAAC5+Bg/AAAAAAAAgD8AAAAAAABQPwAAAAAAAFg/AAAAAAAAWD8AAIA/AACAPgAAgD8AAGA+AACAPwAAYD4AAAAAeoJaPwAAAACYbWo/AAAAAAAAAD8AAAA/mG1qPwAAAACvQXY/AAAAAAAAAD8AAAA/r0F2PwAAAABfin0/AAAAAAAAAD8AAAA/X4p9PwAAAAAAAIA/AAAAAAAAAD8AAAA/AAAAPgAAgD8AAMA9AACAPwAAwD0AAAAAAAAgPgAAgD8AAAA+AACAPwAAAD4AAAAAAADAPQAAgD8AAIA9AACAPwAAgD0AAAAAAACAPQAAgD8AAAA9AACAPwAAAD0AAAAAAAAAPQAAgD8AAAAAAACAPwAAAAAAAAAA7RxHPwAAAAB6glo/AAAAAAAAAD8AAAA/xfswPwAAAADtHEc/AAAAAAAAAD8AAAA/uPgYPwAAAADF+zA/AAAAAAAAAD8AAAA/////PgAAAAC4+Bg/AAAAAAAAAD8AAAA/AABAPgAAgD8AACA+AACAPwAAID4AAAAAAABgPgAAgD8AAEA+AACAPwAAQD4AAAAAAABIPwAAAAAAAFA/AAAAAAAAUD8AAIA/AACAPwAAAABgin0/AAAAAAAAAD8AAAA/YIp9PwAAAACwQXY/AAAAAAAAAD8AAAA/sEF2PwAAAACYbWo/AAAAAAAAAD8AAAA/mG1qPwAAAAB4glo/AAAAAAAAAD8AAAA/AAAAAAAAgD8AAHg/AACAPwAAeD8AAAAAAAB4PwAAgD8AAHA/AACAPwAAcD8AAAAAAABwPwAAgD8AAGg/AACAPwAAaD8AAAAAAABoPwAAgD8AAGA/AACAPwAAYD8AAAAAAABgPwAAgD8AAFg/AACAPwAAWD8AAAAAeIJaPwAAAADsHEc/AAAAAAAAAD8AAAA/7BxHPwAAAADH+zA/AAAAAAAAAD8AAAA/x/swPwAAAAC5+Bg/AAAAAAAAAD8AAAA/ufgYPwAAAAAAAAA/AAAAAAAAAD8AAAA/AABYPwAAgD8AAFA/AACAPwAAUD8AAAAAAADAPgAAAAAAANA+AAAAAAAA0D4AAIA/GPYVPgAAAABAk6w9AAAAAAAAAD8AAAA/AAAIPwAAgD8AAAA/AACAPwAAAD8AAAAAAAAQPwAAgD8AAAg/AACAPwAACD8AAAAAAAAYPwAAgD8AABA/AACAPwAAED8AAAAAAAAoPwAAgD8AACA/AACAPwAAID8AAAAAAAAgPwAAgD8AABg/AACAPwAAGD8AAAAAAACAPgAAAAAAAJA+AAAAAAAAkD4AAIA/AACQPgAAAAAAAKA+AAAAAAAAoD4AAIA/AACgPgAAAAAAALA+AAAAAAAAsD4AAIA/GvYVPgAAAABOjGM+AAAAAAAAgD8AAAAAOJOsPQAAAAAa9hU+AAAAAAAAgD8AAAAAEOUbPQAAAAA4k6w9AAAAAAAAgD8AAAAAIGgdPAAAAAAQ5Rs9AAAAAAAAgD8AAAAAAAAAAAAAAAAgaB08AAAAAAAAgD8AAAAAAACwPgAAAAAAAMA+AAAAAAAAwD4AAIA/QJOsPQAAAAAQ5Rs9AAAAAAAAAD8AAAA/AADQPgAAAAAAAOA+AAAAAAAA4D4AAIA/AADgPgAAAAAAAPA+AAAAAAAA8D4AAIA/AADwPgAAAAAAAAA/AAAAAAAAAD8AAIA/AAA4PwAAAAAAAEA/AAAAAAAAQD8AAIA/AAAwPwAAAAAAADg/AAAAAAAAOD8AAIA/AAAoPwAAAAAAADA/AAAAAAAAMD8AAIA/GPYVPgAAAABAk6w9AAAAAAAAgD8AAAAAIGgdPAAAAAAAAAAAAAAAAAAAgD8AAAAAEOUbPQAAAAAgaB08AAAAAAAAgD8AAAAAQJOsPQAAAAAQ5Rs9AAAAAAAAgD8AAAAARoxjPgAAAAAY9hU+AAAAAAAAgD8AAAAAAAAAPwAAAAAAAAg/AAAAAAAACD8AAIA/AAAQPwAAAAAAABg/AAAAAAAAGD8AAIA/AAAIPwAAAAAAABA/AAAAAAAAED8AAIA/AAAYPwAAAAAAACA/AAAAAAAAID8AAIA/AAAAAAAAAAAgaB08AAAAAAAAAD8AAAA/AABAPwAAAAAAAEg/AAAAAAAASD8AAIA/ufgYPwAAAAAAAAA/AAAAAAAAgD8AAAAAAAAAPwAAAACODs4+AAAAAAAAgD8AAAAAjg7OPgAAAABzCJ4+AAAAAAAAgD8AAAAAcwiePgAAAABGjGM+AAAAAAAAgD8AAAAAkA7OPgAAAAD///8+AAAAAAAAAD8AAAA/dgiePgAAAACQDs4+AAAAAAAAAD8AAAA/ToxjPgAAAAB2CJ4+AAAAAAAAAD8AAAA/GvYVPgAAAABOjGM+AAAAAAAAAD8AAAA/AACQPgAAgD8AAIA+AACAPwAAgD4AAAAAAACgPgAAgD8AAJA+AACAPwAAkD4AAAAAAACwPgAAgD8AAKA+AACAPwAAoD4AAAAAOJOsPQAAAAAa9hU+AAAAAAAAAD8AAAA/EOUbPQAAAAA4k6w9AAAAAAAAAD8AAAA/IGgdPAAAAAAQ5Rs9AAAAAAAAAD8AAAA/AAAgPwAAAAAAACg/AAAAAAAAKD8AAIA/AADAPgAAgD8AALA+AACAPwAAsD4AAAAAAADQPgAAgD8AAMA+AACAPwAAwD4AAAAAAADgPgAAgD8AANA+AACAPwAA0D4AAAAAAADwPgAAgD8AAOA+AACAPwAA4D4AAAAAAAAAPwAAgD8AAPA+AACAPwAA8D4AAAAAAAAAPwAAAACODs4+AAAAAAAAAD8AAAA/jg7OPgAAAABzCJ4+AAAAAAAAAD8AAAA/cwiePgAAAABGjGM+AAAAAAAAAD8AAAA/RoxjPgAAAAAY9hU+AAAAAAAAAD8AAAA/AABAPwAAgD8AADg/AACAPwAAOD8AAAAAAAA4PwAAgD8AADA/AACAPwAAMD8AAAAAAAAwPwAAgD8AACg/AACAPwAAKD8AAAAAIGgdPAAAAAAAAAAAAAAAAAAAAD8AAAA/EOUbPQAAAAAgaB08AAAAAAAAAD8AAAA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 378,
"vertex_data": PackedByteArray("hUTSsArXo7spXA89x77fOwrXo7v6mgw9KVwPPQrXo7sAAAAAzL7fOwrXozv6mgy9uXPlLwrXozspXA+9uXPlLwrXo7spXA+93b3KPArXo7vdvco8CUufPArXo7siZu48CUufPArXozsiZu48ImbuPArXo7sJS5883b3KPArXo7vdvco83b3KPArXozvdvco8+poMPQrXo7vFvt87h3IEPQrXo7stcls8h3IEPQrXozstcls8h3IEPQrXo7stcls8ImbuPArXo7sJS588ImbuPArXozsJS588KVwPPQrXo7sAAAAA+poMPQrXo7vFvt87+poMPQrXozvFvt87CUufPArXo7siZu483b3KPArXo7vdvco8KVwPPQrXo7sAAAAALHJbPArXo7uHcgQ9CUufPArXo7siZu48KVwPPQrXo7sAAAAAx77fOwrXo7v6mgw9LHJbPArXo7uHcgQ9KVwPPQrXo7sAAAAAImbuPArXo7sJS588h3IEPQrXo7stcls8KVwPPQrXo7sAAAAA3b3KPArXo7vdvco8ImbuPArXo7sJS588KVwPPQrXo7sAAAAAh3IEPQrXo7stcls8+poMPQrXo7vFvt87KVwPPQrXo7sAAAAACUufPArXo7siZu48LHJbPArXo7uHcgQ9LHJbPArXozuHcgQ9LHJbPArXo7uHcgQ9x77fOwrXo7v6mgw9x77fOwrXozv6mgw9x77fOwrXo7v6mgw9hUTSsArXo7spXA89hUTSsArXozspXA89M3JbPArXozuGcgS9zL7fOwrXozv6mgy9zL7fOwrXo7v6mgy9xb7fuwrXo7v6mgw9hUTSsArXo7spXA89KVwPPQrXo7sAAAAAK3JbvArXo7uHcgQ9xb7fuwrXo7v6mgw9KVwPPQrXo7sAAAAACEufvArXo7skZu48K3JbvArXo7uHcgQ9KVwPPQrXo7sAAAAA+poMPQrXo7u+vt+7KVwPPQrXo7sAAAAAKVwPPQrXozsAAAAAh3IEPQrXo7ssclu8+poMPQrXo7u+vt+7+poMPQrXozu+vt+7ImbuPArXo7sKS5+8h3IEPQrXo7ssclu8h3IEPQrXozssclu8273KPArXo7vfvcq8ImbuPArXo7sKS5+8ImbuPArXozsKS5+8BUufPArXo7slZu68273KPArXo7vfvcq8273KPArXozvfvcq8+poMPQrXo7u+vt+7h3IEPQrXo7ssclu8KVwPPQrXo7sAAAAAh3IEPQrXo7ssclu8ImbuPArXo7sKS5+8KVwPPQrXo7sAAAAAImbuPArXo7sKS5+8273KPArXo7vfvcq8KVwPPQrXo7sAAAAA273KPArXo7vfvcq8BUufPArXo7slZu68KVwPPQrXo7sAAAAABUufPArXo7slZu68M3JbPArXo7uGcgS9KVwPPQrXo7sAAAAAM3JbPArXo7uGcgS9zL7fOwrXo7v6mgy9KVwPPQrXo7sAAAAAM3JbPArXo7uGcgS9BUufPArXo7slZu68BUufPArXozslZu68hUTSsArXozspXA89x77fOwrXozv6mgw9x77fOwrXo7v6mgw9ImbuPArXozsJS5883b3KPArXozvdvco8AAAAAArXozsAAAAAh3IEPQrXozstcls8ImbuPArXozsJS588AAAAAArXozsAAAAA+poMPQrXozvFvt87h3IEPQrXozstcls8AAAAAArXozsAAAAAKVwPPQrXozsAAAAA+poMPQrXozvFvt87AAAAAArXozsAAAAA3b3KPArXozvdvco8ImbuPArXozsJS588ImbuPArXo7sJS588CUufPArXozsiZu483b3KPArXozvdvco83b3KPArXo7vdvco8ImbuPArXozsJS588h3IEPQrXozstcls8h3IEPQrXo7stcls8h3IEPQrXozstcls8+poMPQrXozvFvt87+poMPQrXo7vFvt87+poMPQrXozvFvt87KVwPPQrXozsAAAAAKVwPPQrXo7sAAAAA3b3KPArXozvdvco8CUufPArXozsiZu48AAAAAArXozsAAAAACUufPArXozsiZu48LHJbPArXozuHcgQ9AAAAAArXozsAAAAALHJbPArXozuHcgQ9x77fOwrXozv6mgw9AAAAAArXozsAAAAAx77fOwrXozv6mgw9hUTSsArXozspXA89AAAAAArXozsAAAAALHJbPArXozuHcgQ9CUufPArXozsiZu48CUufPArXo7siZu48x77fOwrXozv6mgw9LHJbPArXozuHcgQ9LHJbPArXo7uHcgQ9zL7fOwrXo7v6mgy9M3JbPArXo7uGcgS9M3JbPArXozuGcgS9+poMPQrXozu+vt+7KVwPPQrXozsAAAAAAAAAAArXozsAAAAAh3IEPQrXozssclu8+poMPQrXozu+vt+7AAAAAArXozsAAAAAImbuPArXozsKS5+8h3IEPQrXozssclu8AAAAAArXozsAAAAA273KPArXozvfvcq8ImbuPArXozsKS5+8AAAAAArXozsAAAAAKVwPPQrXozsAAAAA+poMPQrXozu+vt+7+poMPQrXo7u+vt+7+poMPQrXozu+vt+7h3IEPQrXozssclu8h3IEPQrXo7ssclu8h3IEPQrXozssclu8ImbuPArXozsKS5+8ImbuPArXo7sKS5+8ImbuPArXozsKS5+8273KPArXozvfvcq8273KPArXo7vfvcq8273KPArXozvfvcq8BUufPArXozslZu68BUufPArXo7slZu68BUufPArXozslZu68273KPArXozvfvcq8AAAAAArXozsAAAAAM3JbPArXozuGcgS9BUufPArXozslZu68AAAAAArXozsAAAAAzL7fOwrXozv6mgy9M3JbPArXozuGcgS9AAAAAArXozsAAAAAuXPlLwrXozspXA+9zL7fOwrXozv6mgy9AAAAAArXozsAAAAABUufPArXozslZu68M3JbPArXozuGcgS9M3JbPArXo7uGcgS93b3KvArXo7vdvco8JGbuvArXo7sIS588JGbuvArXozsIS588IWbuvArXozsKS5+83r3KvArXozvcvcq8AAAAAArXozsAAAAA+poMvQrXozu/vt+7KVwPvQrXozuFRFKxKVwPvQrXo7uFRFKxh3IEvQrXozssclu8+poMvQrXozu/vt+7+poMvQrXo7u/vt+7IWbuvArXozsKS5+8h3IEvQrXozssclu8h3IEvQrXo7ssclu8DEufvArXozsgZu683r3KvArXozvcvcq83r3KvArXo7vcvcq83r3KvArXozvcvcq8IWbuvArXozsKS5+8IWbuvArXo7sKS5+8hUTSsArXo7spXA89xb7fuwrXo7v6mgw9xb7fuwrXozv6mgw9xb7fuwrXo7v6mgw9K3JbvArXo7uHcgQ9K3JbvArXozuHcgQ9K3JbvArXo7uHcgQ9CEufvArXo7skZu48CEufvArXozskZu483b3KvArXo7vdvco8CEufvArXo7skZu48KVwPPQrXo7sAAAAAJGbuvArXo7sIS5883b3KvArXo7vdvco8KVwPPQrXo7sAAAAAh3IEvQrXo7sucls8JGbuvArXo7sIS588KVwPPQrXo7sAAAAA+poMvQrXo7vEvt87h3IEvQrXo7sucls8KVwPPQrXo7sAAAAAKVwPvQrXo7uFRFKx+poMvQrXo7vEvt87KVwPPQrXo7sAAAAACEufvArXo7skZu483b3KvArXo7vdvco83b3KvArXozvdvco8h3IEvQrXozssclu8IWbuvArXozsKS5+8AAAAAArXozsAAAAAJGbuvArXo7sIS588h3IEvQrXo7sucls8h3IEvQrXozsucls8h3IEvQrXo7sucls8+poMvQrXo7vEvt87+poMvQrXozvEvt87+poMvQrXo7vEvt87KVwPvQrXo7uFRFKxKVwPvQrXozuFRFKxyb7fuwrXo7v6mgy9uXPlLwrXo7spXA+9uXPlLwrXozspXA+9MnJbvArXo7uHcgS9yb7fuwrXo7v6mgy9yb7fuwrXozv6mgy9DEufvArXo7sgZu68MnJbvArXo7uHcgS9MnJbvArXozuHcgS93r3KvArXo7vcvcq8IWbuvArXo7sKS5+8KVwPPQrXo7sAAAAA+poMvQrXo7u/vt+7KVwPvQrXo7uFRFKxKVwPPQrXo7sAAAAAh3IEvQrXo7ssclu8+poMvQrXo7u/vt+7KVwPPQrXo7sAAAAAIWbuvArXo7sKS5+8h3IEvQrXo7ssclu8KVwPPQrXo7sAAAAADEufvArXo7sgZu683r3KvArXo7vcvcq8KVwPPQrXo7sAAAAAKVwPvQrXo7uFRFKx+poMvQrXo7u/vt+7+poMvQrXozu/vt+7h3IEvQrXo7ssclu8IWbuvArXo7sKS5+8IWbuvArXozsKS5+8+poMvQrXo7u/vt+7h3IEvQrXo7ssclu8h3IEvQrXozssclu8IWbuvArXo7sKS5+83r3KvArXo7vcvcq83r3KvArXozvcvcq8+poMvQrXozvEvt87KVwPvQrXozuFRFKxAAAAAArXozsAAAAAuXPlLwrXo7spXA+9zL7fOwrXo7v6mgy9zL7fOwrXozv6mgy9zL7fOwrXo7v6mgy9uXPlLwrXo7spXA+9KVwPPQrXo7sAAAAAuXPlLwrXo7spXA+9yb7fuwrXo7v6mgy9KVwPPQrXo7sAAAAAyb7fuwrXo7v6mgy9MnJbvArXo7uHcgS9KVwPPQrXo7sAAAAAMnJbvArXo7uHcgS9DEufvArXo7sgZu68KVwPPQrXo7sAAAAAhUTSsArXozspXA89xb7fuwrXozv6mgw9AAAAAArXozsAAAAAxb7fuwrXozv6mgw9K3JbvArXozuHcgQ9AAAAAArXozsAAAAAK3JbvArXozuHcgQ9CEufvArXozskZu48AAAAAArXozsAAAAACEufvArXozskZu483b3KvArXozvdvco8AAAAAArXozsAAAAAxb7fuwrXozv6mgw9hUTSsArXozspXA89hUTSsArXo7spXA89K3JbvArXozuHcgQ9xb7fuwrXozv6mgw9xb7fuwrXo7v6mgw9CEufvArXozskZu48K3JbvArXozuHcgQ9K3JbvArXo7uHcgQ93b3KvArXozvdvco8JGbuvArXozsIS588AAAAAArXozsAAAAAJGbuvArXozsIS588h3IEvQrXozsucls8AAAAAArXozsAAAAAh3IEvQrXozsucls8+poMvQrXozvEvt87AAAAAArXozsAAAAA3r3KvArXo7vcvcq8DEufvArXo7sgZu68DEufvArXozsgZu683b3KvArXozvdvco8CEufvArXozskZu48CEufvArXo7skZu48JGbuvArXozsIS5883b3KvArXozvdvco83b3KvArXo7vdvco8h3IEvQrXozsucls8JGbuvArXozsIS588JGbuvArXo7sIS588+poMvQrXozvEvt87h3IEvQrXozsucls8h3IEvQrXo7sucls8KVwPvQrXozuFRFKx+poMvQrXozvEvt87+poMvQrXo7vEvt87yb7fuwrXozv6mgy9uXPlLwrXozspXA+9AAAAAArXozsAAAAAMnJbvArXozuHcgS9yb7fuwrXozv6mgy9AAAAAArXozsAAAAADEufvArXozsgZu68MnJbvArXozuHcgS9AAAAAArXozsAAAAA3r3KvArXozvcvcq8DEufvArXozsgZu68AAAAAArXozsAAAAAuXPlLwrXozspXA+9yb7fuwrXozv6mgy9yb7fuwrXo7v6mgy9yb7fuwrXozv6mgy9MnJbvArXozuHcgS9MnJbvArXo7uHcgS9MnJbvArXozuHcgS9DEufvArXozsgZu68DEufvArXo7sgZu68KVwPvQrXozuFRFKx+poMvQrXozu/vt+7AAAAAArXozsAAAAA+poMvQrXozu/vt+7h3IEvQrXozssclu8AAAAAArXozsAAAAA/38AAP///7//fwAA////v/9/AAD///+////e7d7t/78AAO37//8Iwv//7fvt+/+/5b3/f+U9/78Rsf9/ETH/v2+1/39wNf+/jsr/f49K/7/lvf9/5T3/vxnC/38ZQv+/yef/f8ln/78T2P9/FFj/vwDd/38AXf+/E9j/fxRY/7+Oyv9/j0r/v+3O/3/tTv+/7fv/f+17/7/J5/9/yWf/v97t/3/ebf+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/EbH/fxEx/7/+ov9//iL/v+qn/3/rJ/+//qL/f/4i/78gkv9/IBL/vzWY/381GP+/IJL/fyAS/7/te/9/AAAIwhGE/38RBP+///8A3QDd/7///97t3u3/v///yefJ5/+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+///8gkgAAEAnt+/9///8IAv//EYQAAAgC///+ov6i/7///yCSIJL/v///NZg1mP+///8RsRGx/7////6i/qL/v///6qfqp/+////lveW9/7///xGxEbH/v///b7Vvtf+///+Oyo7K/7///+W95b3/v///GcIZwv+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+///8T2BPY/7///47Kjsr/v///7c7tzv+/EYT/fxEE/781mP9/NRj/vyCS/38gEv+//3///01G/7//f///TUb/v/9///9NRv+//3///2lT/7//f///aVP/v/9///9pU/+//3///zVi/7//f///NWL/v/9///81Yv+//3///4V0/7//f///hXT/v/9///+FdP+/GcL/fxlC/7/tzv9/7U7/v47K/3+PSv+/b7X/f3A1/78Zwv9/GUL/v+W9/3/lPf+/7c7/f+1O/78A3f9/AF3/vxPY/38UWP+/AN3/fwBd/7/e7f9/3m3/v8nn/3/JZ/+/3u3/f95t/7///xGEEYT/v+37/3/te/+//3///7I5/7//f///sjn/v/9///+yOf+//3///5Us/7//f///lSz/v/9///+VLP+//3///8od/7//f///yh3/v/9////KHf+//3///3kL/7//f///eQv/v/9///95C/+/6qf/f+sn/79vtf9/cDX/vxGx/38RMf+/NZj/fzUY/7/qp/9/6yf/v/6i/3/+Iv+////J58nn/7///xPYE9j/v///AN0A3f+//3///wAAvAX/f///AAC8Bf9///8AALwF/3///wAA5Q7/f///AADlDv9///8AAOUO/3///wAAShb/f///AABKFv9///8AAEoW/3///wAA2Rz/f///AADZHP9///8AANkc//8RhAAACAL//zWYAAAaDP//IJIAABAJ//81mDWY/7///+qn6qf/v////qL+ov+////qp+qn/7///2+1b7X/v///EbERsf+///9vtW+1/7///xnCGcL/v///5b3lvf+///8ZwhnC/7///+3O7c7/v///jsqOyv+//3///wAAJiP/f///AAAmI/9///8AACYj/3///wAAtCn/f///AAC0Kf9///8AALQp/3///wAAGjH/f///AAAaMf9///8AABox/3///wAAQjr/f///AABCOv9///8AAEI6///tzu3O/7///wDdAN3/v///E9gT2P+/5T3/fwAADOERMf9/AAB253A1/38AAEbl/3///01G/z//f///TUb/P/9///9NRv8/AAAgkv//7vYRBP9/AAD2/QAAEYT///b9AAD+ov//f+4AACCS///u9gAANZj//+TzAAARsf//ducAAP6i//9/7gAA6qf//wnsAACOyv//t9oAAOW9//8M4QAAGcL///LeAADlvf//DOEAABGx//925wAAb7X//0bl7Xv/fwAACMLJZ/9/AAAazN5t/38AAA/JyWf/fwAAGswUWP9/AAD00wBd/38AAH7RFFj/fwAA9NOPSv9/AAC32u1O/38AAIjY/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/j0r/fwAAt9rlPf9/AAAM4RlC/38AAPLe/3///2lT/z//f///aVP/P/9///9pU/8/ETH/fwAAduf+Iv9/AAB/7usn/38AAAns/iL/fwAAf+4gEv9/AADu9jUY/38AAOTzIBL/fwAA7vYAABGE///2/REE/38AAPb9AADe7f//D8n//+377fv/vwAA7fv//wjCAAAA3f//ftEAAN7t//8PyQAAyef//xrMAADtzv//iNgAAADd//9+0QAAE9j///TT/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/AAARhP//9v0AADWY///k8wAAIJL//+72AADqp///CewAAG+1//9G5QAAEbH//3bnAAA1mP//5PMAAOqn//8J7AAA/qL//3/uAABvtf//RuUAABnC///y3gAA5b3//wzh/3///wAAQvr/f///AABC+v9///8AAEL6///t++37/7///8nnyef/v///3u3e7f+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//3///wAAvMX/f///AAC8xf9///8AALzF/3///wAA5M7/f///AADkzv9///8AAOTO/3///wAAStb/f///AABK1v9///8AAErW/3///wAA2Nz/f///AADY3P9///8AANjc3m3/fwAAD8kRhP9/EQT/v+17/38AAAjCAF3/fwAAftHebf9/AAAPycln/38AABrM7U7/fwAAiNgAXf9/AAB+0RRY/38AAPTT/3///wAAJeP/f///AAAl4/9///8AACXj/3///wAAtOn/f///AAC06f9///8AALTp/3///wAAGfH/f///AAAZ8f9///8AABnxAAAZwv//8t4AAO3O//+I2AAAjsr//7faGUL/fwAA8t7tTv9/AACI2I9K/38AALfacDX/fwAARuUZQv9/AADy3uU9/38AAAzh6yf/fwAACexwNf9/AABG5REx/38AAHbnNRj/fwAA5PPrJ/9/AAAJ7P4i/38AAH/uEQT/fwAA9v01GP9/AADk8yAS/38AAO72/3///3kL/z//f///eQv/P/9///95C/8//3///8od/z//f///yh3/P/9////KHf8//3///5Us/z//f///lSz/P/9///+VLP8//3///7I5/z//f///sjn/P/9///+yOf8/AADt+///CMIAAMnn//8azAAA3u3//w/JAADJ5///GswAABPY///00wAAAN3//37RAAAT2P//9NMAAI7K//+32gAA7c7//4jY/3///4V0/z//f///hXT/P/9///+FdP8//3///zVi/z//f///NWL/P/9///81Yv8/")
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cfiug"]
data = PackedVector3Array(0, -0.005, 0.035, 0.0068, -0.005, 0.0343, 0.035, -0.005, 0, 0.0068, 0.005, -0.0343, 0, 0.005, -0.035, 0, -0.005, -0.035, 0.0247, -0.005, 0.0247, 0.0194, -0.005, 0.0291, 0.0194, 0.005, 0.0291, 0.0291, -0.005, 0.0194, 0.0247, -0.005, 0.0247, 0.0247, 0.005, 0.0247, 0.0343, -0.005, 0.0068, 0.0323, -0.005, 0.0134, 0.0323, 0.005, 0.0134, 0.0323, -0.005, 0.0134, 0.0291, -0.005, 0.0194, 0.0291, 0.005, 0.0194, 0.035, -0.005, 0, 0.0343, -0.005, 0.0068, 0.0343, 0.005, 0.0068, 0.0194, -0.005, 0.0291, 0.0247, -0.005, 0.0247, 0.035, -0.005, 0, 0.0134, -0.005, 0.0323, 0.0194, -0.005, 0.0291, 0.035, -0.005, 0, 0.0068, -0.005, 0.0343, 0.0134, -0.005, 0.0323, 0.035, -0.005, 0, 0.0291, -0.005, 0.0194, 0.0323, -0.005, 0.0134, 0.035, -0.005, 0, 0.0247, -0.005, 0.0247, 0.0291, -0.005, 0.0194, 0.035, -0.005, 0, 0.0323, -0.005, 0.0134, 0.0343, -0.005, 0.0068, 0.035, -0.005, 0, 0.0194, -0.005, 0.0291, 0.0134, -0.005, 0.0323, 0.0134, 0.005, 0.0323, 0.0134, -0.005, 0.0323, 0.0068, -0.005, 0.0343, 0.0068, 0.005, 0.0343, 0.0068, -0.005, 0.0343, 0, -0.005, 0.035, 0, 0.005, 0.035, 0.0134, 0.005, -0.0323, 0.0068, 0.005, -0.0343, 0.0068, -0.005, -0.0343, -0.0068, -0.005, 0.0343, 0, -0.005, 0.035, 0.035, -0.005, 0, -0.0134, -0.005, 0.0323, -0.0068, -0.005, 0.0343, 0.035, -0.005, 0, -0.0194, -0.005, 0.0291, -0.0134, -0.005, 0.0323, 0.035, -0.005, 0, 0.0343, -0.005, -0.0068, 0.035, -0.005, 0, 0.035, 0.005, 0, 0.0323, -0.005, -0.0134, 0.0343, -0.005, -0.0068, 0.0343, 0.005, -0.0068, 0.0291, -0.005, -0.0194, 0.0323, -0.005, -0.0134, 0.0323, 0.005, -0.0134, 0.0247, -0.005, -0.0247, 0.0291, -0.005, -0.0194, 0.0291, 0.005, -0.0194, 0.0194, -0.005, -0.0291, 0.0247, -0.005, -0.0247, 0.0247, 0.005, -0.0247, 0.0343, -0.005, -0.0068, 0.0323, -0.005, -0.0134, 0.035, -0.005, 0, 0.0323, -0.005, -0.0134, 0.0291, -0.005, -0.0194, 0.035, -0.005, 0, 0.0291, -0.005, -0.0194, 0.0247, -0.005, -0.0247, 0.035, -0.005, 0, 0.0247, -0.005, -0.0247, 0.0194, -0.005, -0.0291, 0.035, -0.005, 0, 0.0194, -0.005, -0.0291, 0.0134, -0.005, -0.0323, 0.035, -0.005, 0, 0.0134, -0.005, -0.0323, 0.0068, -0.005, -0.0343, 0.035, -0.005, 0, 0.0134, -0.005, -0.0323, 0.0194, -0.005, -0.0291, 0.0194, 0.005, -0.0291, 0, 0.005, 0.035, 0.0068, 0.005, 0.0343, 0.0068, -0.005, 0.0343, 0.0291, 0.005, 0.0194, 0.0247, 0.005, 0.0247, 0, 0.005, 0, 0.0323, 0.005, 0.0134, 0.0291, 0.005, 0.0194, 0, 0.005, 0, 0.0343, 0.005, 0.0068, 0.0323, 0.005, 0.0134, 0, 0.005, 0, 0.035, 0.005, 0, 0.0343, 0.005, 0.0068, 0, 0.005, 0, 0.0247, 0.005, 0.0247, 0.0291, 0.005, 0.0194, 0.0291, -0.005, 0.0194, 0.0194, 0.005, 0.0291, 0.0247, 0.005, 0.0247, 0.0247, -0.005, 0.0247, 0.0291, 0.005, 0.0194, 0.0323, 0.005, 0.0134, 0.0323, -0.005, 0.0134, 0.0323, 0.005, 0.0134, 0.0343, 0.005, 0.0068, 0.0343, -0.005, 0.0068, 0.0343, 0.005, 0.0068, 0.035, 0.005, 0, 0.035, -0.005, 0, 0.0247, 0.005, 0.0247, 0.0194, 0.005, 0.0291, 0, 0.005, 0, 0.0194, 0.005, 0.0291, 0.0134, 0.005, 0.0323, 0, 0.005, 0, 0.0134, 0.005, 0.0323, 0.0068, 0.005, 0.0343, 0, 0.005, 0, 0.0068, 0.005, 0.0343, 0, 0.005, 0.035, 0, 0.005, 0, 0.0134, 0.005, 0.0323, 0.0194, 0.005, 0.0291, 0.0194, -0.005, 0.0291, 0.0068, 0.005, 0.0343, 0.0134, 0.005, 0.0323, 0.0134, -0.005, 0.0323, 0.0068, -0.005, -0.0343, 0.0134, -0.005, -0.0323, 0.0134, 0.005, -0.0323, 0.0343, 0.005, -0.0068, 0.035, 0.005, 0, 0, 0.005, 0, 0.0323, 0.005, -0.0134, 0.0343, 0.005, -0.0068, 0, 0.005, 0, 0.0291, 0.005, -0.0194, 0.0323, 0.005, -0.0134, 0, 0.005, 0, 0.0247, 0.005, -0.0247, 0.0291, 0.005, -0.0194, 0, 0.005, 0, 0.035, 0.005, 0, 0.0343, 0.005, -0.0068, 0.0343, -0.005, -0.0068, 0.0343, 0.005, -0.0068, 0.0323, 0.005, -0.0134, 0.0323, -0.005, -0.0134, 0.0323, 0.005, -0.0134, 0.0291, 0.005, -0.0194, 0.0291, -0.005, -0.0194, 0.0291, 0.005, -0.0194, 0.0247, 0.005, -0.0247, 0.0247, -0.005, -0.0247, 0.0247, 0.005, -0.0247, 0.0194, 0.005, -0.0291, 0.0194, -0.005, -0.0291, 0.0194, 0.005, -0.0291, 0.0247, 0.005, -0.0247, 0, 0.005, 0, 0.0134, 0.005, -0.0323, 0.0194, 0.005, -0.0291, 0, 0.005, 0, 0.0068, 0.005, -0.0343, 0.0134, 0.005, -0.0323, 0, 0.005, 0, 0, 0.005, -0.035, 0.0068, 0.005, -0.0343, 0, 0.005, 0, 0.0194, 0.005, -0.0291, 0.0134, 0.005, -0.0323, 0.0134, -0.005, -0.0323, -0.0247, -0.005, 0.0247, -0.0291, -0.005, 0.0194, -0.0291, 0.005, 0.0194, -0.0291, 0.005, -0.0194, -0.0247, 0.005, -0.0247, 0, 0.005, 0, -0.0343, 0.005, -0.0068, -0.035, 0.005, 0, -0.035, -0.005, 0, -0.0323, 0.005, -0.0134, -0.0343, 0.005, -0.0068, -0.0343, -0.005, -0.0068, -0.0291, 0.005, -0.0194, -0.0323, 0.005, -0.0134, -0.0323, -0.005, -0.0134, -0.0194, 0.005, -0.0291, -0.0247, 0.005, -0.0247, -0.0247, -0.005, -0.0247, -0.0247, 0.005, -0.0247, -0.0291, 0.005, -0.0194, -0.0291, -0.005, -0.0194, 0, -0.005, 0.035, -0.0068, -0.005, 0.0343, -0.0068, 0.005, 0.0343, -0.0068, -0.005, 0.0343, -0.0134, -0.005, 0.0323, -0.0134, 0.005, 0.0323, -0.0134, -0.005, 0.0323, -0.0194, -0.005, 0.0291, -0.0194, 0.005, 0.0291, -0.0247, -0.005, 0.0247, -0.0194, -0.005, 0.0291, 0.035, -0.005, 0, -0.0291, -0.005, 0.0194, -0.0247, -0.005, 0.0247, 0.035, -0.005, 0, -0.0323, -0.005, 0.0134, -0.0291, -0.005, 0.0194, 0.035, -0.005, 0, -0.0343, -0.005, 0.0068, -0.0323, -0.005, 0.0134, 0.035, -0.005, 0, -0.035, -0.005, 0, -0.0343, -0.005, 0.0068, 0.035, -0.005, 0, -0.0194, -0.005, 0.0291, -0.0247, -0.005, 0.0247, -0.0247, 0.005, 0.0247, -0.0323, 0.005, -0.0134, -0.0291, 0.005, -0.0194, 0, 0.005, 0, -0.0291, -0.005, 0.0194, -0.0323, -0.005, 0.0134, -0.0323, 0.005, 0.0134, -0.0323, -0.005, 0.0134, -0.0343, -0.005, 0.0068, -0.0343, 0.005, 0.0068, -0.0343, -0.005, 0.0068, -0.035, -0.005, 0, -0.035, 0.005, 0, -0.0068, -0.005, -0.0343, 0, -0.005, -0.035, 0, 0.005, -0.035, -0.0134, -0.005, -0.0323, -0.0068, -0.005, -0.0343, -0.0068, 0.005, -0.0343, -0.0194, -0.005, -0.0291, -0.0134, -0.005, -0.0323, -0.0134, 0.005, -0.0323, -0.0247, -0.005, -0.0247, -0.0291, -0.005, -0.0194, 0.035, -0.005, 0, -0.0343, -0.005, -0.0068, -0.035, -0.005, 0, 0.035, -0.005, 0, -0.0323, -0.005, -0.0134, -0.0343, -0.005, -0.0068, 0.035, -0.005, 0, -0.0291, -0.005, -0.0194, -0.0323, -0.005, -0.0134, 0.035, -0.005, 0, -0.0194, -0.005, -0.0291, -0.0247, -0.005, -0.0247, 0.035, -0.005, 0, -0.035, -0.005, 0, -0.0343, -0.005, -0.0068, -0.0343, 0.005, -0.0068, -0.0323, -0.005, -0.0134, -0.0291, -0.005, -0.0194, -0.0291, 0.005, -0.0194, -0.0343, -0.005, -0.0068, -0.0323, -0.005, -0.0134, -0.0323, 0.005, -0.0134, -0.0291, -0.005, -0.0194, -0.0247, -0.005, -0.0247, -0.0247, 0.005, -0.0247, -0.0343, 0.005, 0.0068, -0.035, 0.005, 0, 0, 0.005, 0, 0, -0.005, -0.035, 0.0068, -0.005, -0.0343, 0.0068, 0.005, -0.0343, 0.0068, -0.005, -0.0343, 0, -0.005, -0.035, 0.035, -0.005, 0, 0, -0.005, -0.035, -0.0068, -0.005, -0.0343, 0.035, -0.005, 0, -0.0068, -0.005, -0.0343, -0.0134, -0.005, -0.0323, 0.035, -0.005, 0, -0.0134, -0.005, -0.0323, -0.0194, -0.005, -0.0291, 0.035, -0.005, 0, 0, 0.005, 0.035, -0.0068, 0.005, 0.0343, 0, 0.005, 0, -0.0068, 0.005, 0.0343, -0.0134, 0.005, 0.0323, 0, 0.005, 0, -0.0134, 0.005, 0.0323, -0.0194, 0.005, 0.0291, 0, 0.005, 0, -0.0194, 0.005, 0.0291, -0.0247, 0.005, 0.0247, 0, 0.005, 0, -0.0068, 0.005, 0.0343, 0, 0.005, 0.035, 0, -0.005, 0.035, -0.0134, 0.005, 0.0323, -0.0068, 0.005, 0.0343, -0.0068, -0.005, 0.0343, -0.0194, 0.005, 0.0291, -0.0134, 0.005, 0.0323, -0.0134, -0.005, 0.0323, -0.0247, 0.005, 0.0247, -0.0291, 0.005, 0.0194, 0, 0.005, 0, -0.0291, 0.005, 0.0194, -0.0323, 0.005, 0.0134, 0, 0.005, 0, -0.0323, 0.005, 0.0134, -0.0343, 0.005, 0.0068, 0, 0.005, 0, -0.0247, -0.005, -0.0247, -0.0194, -0.005, -0.0291, -0.0194, 0.005, -0.0291, -0.0247, 0.005, 0.0247, -0.0194, 0.005, 0.0291, -0.0194, -0.005, 0.0291, -0.0291, 0.005, 0.0194, -0.0247, 0.005, 0.0247, -0.0247, -0.005, 0.0247, -0.0323, 0.005, 0.0134, -0.0291, 0.005, 0.0194, -0.0291, -0.005, 0.0194, -0.0343, 0.005, 0.0068, -0.0323, 0.005, 0.0134, -0.0323, -0.005, 0.0134, -0.035, 0.005, 0, -0.0343, 0.005, 0.0068, -0.0343, -0.005, 0.0068, -0.0068, 0.005, -0.0343, 0, 0.005, -0.035, 0, 0.005, 0, -0.0134, 0.005, -0.0323, -0.0068, 0.005, -0.0343, 0, 0.005, 0, -0.0194, 0.005, -0.0291, -0.0134, 0.005, -0.0323, 0, 0.005, 0, -0.0247, 0.005, -0.0247, -0.0194, 0.005, -0.0291, 0, 0.005, 0, 0, 0.005, -0.035, -0.0068, 0.005, -0.0343, -0.0068, -0.005, -0.0343, -0.0068, 0.005, -0.0343, -0.0134, 0.005, -0.0323, -0.0134, -0.005, -0.0323, -0.0134, 0.005, -0.0323, -0.0194, 0.005, -0.0291, -0.0194, -0.005, -0.0291, -0.035, 0.005, 0, -0.0343, 0.005, -0.0068, 0, 0.005, 0, -0.0343, 0.005, -0.0068, -0.0323, 0.005, -0.0134, 0, 0.005, 0)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_cl5nb")

[node name="Button" type="MeshInstance3D" parent="." node_paths=PackedStringArray("body") groups=["puzzle_block"]]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0106243, 0.0813082, 0.00736607)
mesh = SubResource("ArrayMesh_lcudj")
script = ExtResource("3_cfiug")
outline_material = ExtResource("4_uaqhu")
body = NodePath("StaticBody3D")

[node name="Button_label" type="Label3D" parent="Button"]
unique_name_in_owner = true
transform = Transform3D(-0.0173302, -0.99985, -4.37048e-08, 5.5499e-17, -4.37114e-08, 1, -0.99985, 0.0173302, 7.57528e-10, 0, 0.006, 0)
pixel_size = 0.0005
modulate = Color(0, 0, 0, 1)
text = "Hold"
font_size = 30
outline_size = 0

[node name="StaticBody3D" type="StaticBody3D" parent="Button"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_cfiug")

[node name="Status" type="CSGBox3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.69637e-05, 0.0671263, -0.0470016)
size = Vector3(0.01, 0.01, 0.1)

[node name="state" parent="." instance=ExtResource("5_8re1r")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.046728, 0.0582517, 0.0460316)

[node name="Node3D" parent="." instance=ExtResource("5_jmmk1")]

[connection signal="input_event" from="Button/StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="mouse_entered" from="Button/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="Button/StaticBody3D" to="." method="_on_static_body_3d_mouse_exited"]
